@@ -49,6 +49,9 @@ $messages['deletecontactconfirm']  = 'Do you really want to delete the selected 
 $messages['deletemessagesconfirm'] = 'Do you really want to delete the selected message(s)?';
 $messages['deletefolderconfirm']  = 'Do you really want to delete this folder?';
 $messages['purgefolderconfirm']  = 'Do you really want to delete all messages in this folder?';
+$messages['foldercreating'] = 'Folder creating...';
+$messages['folderdeleting'] = 'Folder deleting...';
+$messages['folderrenaming'] = 'Folder renaming...';
 $messages['formincomplete'] = 'The form was not completely filled out';
 $messages['noemailwarning'] = 'Please enter a valid email address';
 $messages['nonamewarning']  = 'Please enter a name';
